added links to resources for LU decomposition, fixed minor spelling mistakes

--- a/ex01.ipynb
+++ b/ex01.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -126,8 +126,8 @@
       " [-0.4330127  1.25     ]]\n",
       "\n",
       "Diagonal matrix Lambda with eigenvalues:\n",
-      " [[2. 0.]\n",
-      " [0. 1.]] \n",
+      " [[ 2.  0.]\n",
+      " [ 0.  1.]] \n",
       "\n",
       "Matrix Q with eigenvectors as columns:\n",
       " [[ 0.8660254 -0.5      ]\n",
@@ -208,8 +208,10 @@
     "        Lambda = np.diag(values)\n",
     "        Q = np.array(vectors)\n",
     "        \n",
-    "        print('\\nDiagonal matrix Lambda with eigenvalues:\\n', Lambda, '\\n\\nMatrix Q with eigenvectors as columns:\\n', Q)\n",
-    "        print('\\nSo A = Q * Lambda * Q.T:\\n', matrixMultiplication(matrixMultiplication(Q, Lambda) , np.transpose(Q)))\n",
+    "        print('\\nDiagonal matrix Lambda with eigenvalues:\\n', Lambda,\n",
+    "              '\\n\\nMatrix Q with eigenvectors as columns:\\n', Q)\n",
+    "        print('\\nSo A = Q * Lambda * Q.T:\\n',\n",
+    "              matrixMultiplication(matrixMultiplication(Q, Lambda) , np.transpose(Q)))\n",
     "        return Lambda, Q\n",
     "    else:\n",
     "        print(\"Error! eigenvalue_decomposition only supports 2x2 matrices!\")\n",
@@ -238,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -249,7 +251,7 @@
       " [[ 0.8660254 -0.5      ]\n",
       " [-0.5       -0.8660254]] \n",
       "\n",
-      "The columns of the matrix are orthonomal!\n"
+      "The columns of the matrix are orthonormal!\n"
      ]
     },
     {
@@ -258,7 +260,7 @@
        "True"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -304,13 +306,13 @@
     "\n",
     "        # check if columns are orthognal\n",
     "        if dot_product(matrix[:,0], matrix[:,1]) == 0:\n",
-    "            print('The columns of the matrix are orthonomal!')\n",
+    "            print('The columns of the matrix are orthonormal!')\n",
     "            return True\n",
     "        else:\n",
-    "            print('The columns of the matrix are not orthonomal!')\n",
+    "            print('The columns of the matrix are not orthonormal!')\n",
     "            return False\n",
     "    else:\n",
-    "        print(\"Error! orthornomal_columns only supports 2x2 matrices!\")\n",
+    "        print(\"Error! orthornormal_columns only supports 2x2 matrices!\")\n",
     "        \n",
     "print('Q:\\n',Q, '\\n')\n",
     "orthonormal_columns(Q)"
@@ -325,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -337,8 +339,8 @@
       " [-0.5       -0.8660254]] \n",
       "\n",
       "Lambda:\n",
-      " [[2. 0.]\n",
-      " [0. 1.]] \n",
+      " [[ 2.  0.]\n",
+      " [ 0.  1.]] \n",
       "\n",
       "Inverse of Lambda:\n",
       " [[ 0.5 -0. ]\n",
@@ -349,13 +351,13 @@
       " [-0.4330127  1.25     ]] \n",
       "\n",
       "Inverse of A:\n",
-      " [[0.625      0.21650635]\n",
-      " [0.21650635 0.875     ]] \n",
+      " [[ 0.625       0.21650635]\n",
+      " [ 0.21650635  0.875     ]] \n",
       "\n",
       "\n",
       "So inv(A) = Q * inv(Lambda) * Q.T:\n",
-      " [[0.625      0.21650635]\n",
-      " [0.21650635 0.875     ]]\n"
+      " [[ 0.625       0.21650635]\n",
+      " [ 0.21650635  0.875     ]]\n"
      ]
     }
    ],
@@ -402,22 +404,34 @@
     "6 & 13  \\\\\n",
     "\\end{array}\\right]$.\n",
     "\n",
-    "#### (a) Compute $LU$ decomposition of it, i.e. $A = L * U$, where *L* is a lowertriangular matrix and *U* is an uppertriangular matrix. Use this decomposition to solve $A*x = b$ with $b = (1, 2)^T$ via forward and backward substitution."
+    "#### (a) Compute $LU$ decomposition of it, i.e. $A=L\\cdot U$, where *L* is a lowertriangular matrix and *U* is an uppertriangular matrix. Use this decomposition to solve $A\\cdot x=b$ with $b=(1,2)^T$ via forward and backward substitution.\n",
+    "\n",
+    "See: <a href=\"https://docs.scipy.org/doc/scipy/reference/generated/scipy.linalg.lu.html\"> SciPy Documentation for LU decomposition </a>\n",
+    "and\n",
+    "<a href=\"https://www.youtube.com/watch?v=rhNKncraJMk\">  LU decomposition </a>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(array([[0., 1.],\n",
-      "       [1., 0.]]), array([[1. , 0. ],\n",
-      "       [0.5, 1. ]]), array([[ 6. , 13. ],\n",
-      "       [ 0. , -2.5]]))\n",
+      "A\n",
+      " [[ 3  4]\n",
+      " [ 6 13]]\n",
+      "P\n",
+      " [[ 0.  1.]\n",
+      " [ 1.  0.]]\n",
+      "L\n",
+      " [[ 1.   0. ]\n",
+      " [ 0.5  1. ]]\n",
+      "U\n",
+      " [[  6.   13. ]\n",
+      " [  0.   -2.5]]\n",
       "[[ 3  4]\n",
       " [ 6 13]]\n"
      ]
@@ -426,6 +440,7 @@
    "source": [
     "def lu_decomposition(matrix):\n",
     "    dim = np.shape(matrix)\n",
+    "    # TODO!\n",
     "    #L = matrix.copy()\n",
     "    #U = np.ones((dim[0], dim[1]))\n",
     "    for i in range(1,dim[0]-1): \n",
@@ -445,9 +460,12 @@
     "\n",
     "\n",
     "A = np.array([[3, 4], [6, 13]])\n",
+    "print(\"A\\n\", A)\n",
     "\n",
-    "\n",
-    "print(sc.linalg.lu(A))\n",
+    "P, L, U = la.lu(A)\n",
+    "print(\"P\\n\", P)\n",
+    "print(\"L\\n\", L)\n",
+    "print(\"U\\n\", U)\n",
     "\n",
     "print(lu_decomposition(A))\n",
     "\n",
@@ -463,7 +481,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### (b) Use Gauss elimination to explicitly calculate the inverse of $A$ and show that it yields the same solution $x = A^{-1}* b$ from part (a)."
+    "#### (b) Use Gauss elimination to explicitly calculate the inverse of $A$ and show that it yields the same solution $x = A^{-1}\\cdot b$ from part (a)."
    ]
   },
   {
@@ -619,7 +637,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
