Added task description to exercise01. Added material of exercise02.

--- a/exercise01/ex01.ipynb
+++ b/exercise01/ex01.ipynb
@@ -106,7 +106,7 @@
     "### 2. Eigenvalue Decomposition\n",
     "Given the matrix $A=\\frac{1}{4}\\left[ \\begin{array}{rr}\n",
     "7 & -\\sqrt{3}  \\\\\n",
-    "\\sqrt{3} & 5  \\\\\n",
+    "-\\sqrt{3} & 5  \\\\\n",
     "\\end{array}\\right]$.\n",
     "\n",
     "#### (a) Compute the eigenvalue decomposition $A=QΛQ^T$ with $Λ=diag(λ_1,λ_2)$."
@@ -502,7 +502,99 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 4. Vector Norms"
+    "### 4. Vector Norms\n",
+    "\n",
+    "#### (a) Compute the  $\\lVert\\cdot\\rVert_{1}, \\lVert\\cdot\\rVert_{2}, \\lVert\\cdot\\rVert_{8}  $ and  $\\lVert\\cdot \\rVert_{\\infty} $ norms of the following vectors:  \n",
+    "<center>$x_{1} = \\begin{pmatrix}24\\\\3\\\\2\\\\31\\end{pmatrix}$, $x_{2} = \\begin{pmatrix}27\\\\20\\\\26\\\\21\\end{pmatrix}$, $x_{3} = \\begin{pmatrix}30\\\\21\\\\27\\\\5\\end{pmatrix} $ and $ x_{4} = \\begin{pmatrix}26\\\\28\\\\25\\\\14\\end{pmatrix}$.</center>\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### (b) Draw the set of points with $\\lVert x\\rVert_{i}$ for $i \\in \\{1,2,8,\\infty\\}$ and $x \\in \\mathbb{R}^{2}$."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### (c) TODO feedback"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 5. Special Orthogonal Matrices\n",
+    "\n",
+    "#### (a) Given the matrix \n",
+    "<center>$A=\\frac{1}{2}\\left[ \\begin{array}{rr}\n",
+    "7 & \\sqrt{3}  \\\\\n",
+    "\\sqrt{3} & 5  \\\\\n",
+    "\\end{array}\\right]$</center> \n",
+    "#### compute $det(A), Tr(A)$ and its eigenvalues."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### (b) The Matrix <center>$Q(\\alpha)=\\left[ \\begin{array}{rr}\n",
+    "\\cos{\\alpha} & -\\sin{\\alpha}  \\\\\n",
+    "\\sin{\\alpha} & \\cos{\\alpha}  \\\\\n",
+    "\\end{array}\\right]$</center> \n",
+    "#### represents a rotation around an axis by the angle $\\alpha$. Compute $A^{\\prime} = Q \\cdot A \\cdot Q^{T} ,$ det( $A^{\\prime}$), Tr( $A^{\\prime}$) and its eigenvalues for $\\alpha = \\frac{\\pi}{12}$."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### (c) What would $A^{\\prime}$ be for $\\alpha = \\frac{\\pi}{3}$?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### (d) TODO feedback"
    ]
   },
   {
@@ -637,7 +729,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
