--- a/exercise02/exercise02_python_mlp.ipynb
+++ b/exercise02/exercise02_python_mlp.ipynb
@@ -753,6 +753,10 @@
     "    labels_batched = minibatched(labels, batch_size)\n",
     "\n",
     "    for x, y in zip(data_batched, labels_batched):\n",
+    "        # note that when using cross entropy loss, the softmax is included in the\n",
+    "        # loss and we'd need to apply it manually here to obtain the output as probabilities.\n",
+    "        # However, softmax only rescales the outputs and doesn't change the argmax,\n",
+    "        # so we'll skip this here, as we're only interested in the class prediction.\n",
     "        h_1 = np.squeeze(model(x))\n",
     "        predictions.append(h_1)\n",
     "        eval_cost += loss_fn(h_1, y)\n",
@@ -805,7 +809,7 @@
    "source": [
     "# Experiments\n",
     "\n",
-    "Apply it on a sequential model (linear, sigmoid, linear, sigmoid layers). Use the cross entropy loss and sgd with momentum. Use the hyperparameters defined below.\n",
+    "Apply it on a sequential model (linear, sigmoid, linear, softmax (included in cross entropy!). Use the cross entropy loss and sgd with momentum. Use the hyperparameters defined below.\n",
     "\n",
     "What is the best accuracy you can achieve?"
    ]
@@ -923,7 +927,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
