Added backpropagation with pen and paper

--- a/exercise02/exercise02_pen_and_paper_backpropagation.ipynb
+++ b/exercise02/exercise02_pen_and_paper_backpropagation.ipynb
@@ -43,8 +43,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<img src='1a_backprop.jpg'>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "**What difference does the skip connection make when propagating back the error?** \n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Regarding the backpropagation, the third layer receives input from two sources, therefore the gradient flows as well from the third to the first layer in the backward pass. The result is an additional term in the corresponding equations.\n",
+    "\n",
+    "Regarding the effectiveness of training, this helps to reduce the vanishing gradient problem. If we have many layers in our network, the magnitude of gradients can shrink towards the first layers to a point where they are basically not trained. Skip connections help bypass this by propagating the gradient uninterrupted from the last layers. With increasingly deep networks, they are applied quite often in modern architectures."
    ]
   },
   {
@@ -82,7 +98,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
