Added feddback for pen and paper exercise. Exercise 1b not finished yet.

--- a/exercise02/exercise02_pen_and_paper_backpropagation.ipynb
+++ b/exercise02/exercise02_pen_and_paper_backpropagation.ipynb
@@ -75,10 +75,26 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "<img src='1b_gradient_descent.jpg'>"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "** Your feedback on exercise 2.1: ** \n"
+    "** Your feedback on exercise 2.1: **\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We all visited the machine learning course so we were already familiar with this topic and didn't invest too much time. But it was a good revision."
    ]
   }
  ],
