Updated pen and paper.

--- a/exercise02/exercise02_pen_and_paper_backpropagation.ipynb
+++ b/exercise02/exercise02_pen_and_paper_backpropagation.ipynb
@@ -43,7 +43,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src='1a_backprop.jpg'>"
+    "<img src='1a_backpropagation.jpg'>"
    ]
   },
   {
