Added Sequential Network (2d).

--- a/exercise02/exercise02_python_mlp.ipynb
+++ b/exercise02/exercise02_python_mlp.ipynb
@@ -583,16 +583,18 @@
     "        self.modules = args\n",
     "\n",
     "    def forward(self, x: np.ndarray) -> np.ndarray:\n",
-    "        # START TODO ################ \n",
-    "        raise NotImplementedError\n",
+    "        # START ################ \n",
     "        # Remember: module(x) is equivalent to module.forward(x)\n",
-    "        # END TODO ##################\n",
+    "        for module in self.modules:\n",
+    "            x = module(x)\n",
+    "        # END ##################\n",
     "        return x\n",
     "\n",
     "    def backward(self, grad: np.ndarray) -> np.ndarray:\n",
-    "        # START TODO ################ \n",
-    "        raise NotImplementedError\n",
-    "        # END TODO ##################\n",
+    "        # START ################ \n",
+    "        for module in self.modules.reverse():\n",
+    "            grad = module.backward(grad)\n",
+    "        # END ##################\n",
     "        return grad\n",
     "\n",
     "    def parameters(self) -> List[Parameter]:\n",
