Added Adam optimizer (1a).

--- a/exercise03/exercise03_optimization_and_regularization.ipynb
+++ b/exercise03/exercise03_optimization_and_regularization.ipynb
@@ -615,9 +615,18 @@
     "\n",
     "    def step(self) -> None:\n",
     "        \"\"\"Update the parameters and decaying averages of past gradients.\"\"\"\n",
-    "        # START TODO ################\n",
-    "\n",
-    "        # END TODO###################\n"
+    "        # START ################\n",
+    "        self.t += 1\n",
+    "        b1, b2 = self.betas\n",
+    "        for p in self._params:\n",
+    "            p.state_dict['s'] = b1 * p.state_dict['s'] + (1-b1) * p.grad\n",
+    "            p.state_dict['r'] = b2 * p.state_dict['r'] + (1-b2) * (p.grad * p.grad)\n",
+    "            s_cap = p.state_dict['s'] / (1 - b1**self.t)\n",
+    "            r_cap = p.state_dict['r'] / (1 - b2**self.t)\n",
+    "            \n",
+    "            p.data -= (self.lr * s_cap) / (self.eps + np.sqrt(r_cap))\n",
+    "            \n",
+    "        # END ###################\n"
    ]
   },
   {
@@ -1090,7 +1099,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
