--- a/exercise03/exercise03_optimization_and_regularization.ipynb
+++ b/exercise03/exercise03_optimization_and_regularization.ipynb
@@ -651,9 +651,41 @@
     "momentum = 0.9\n",
     "adam_learning_rate = 0.01\n",
     "\n",
-    "# START TODO ################\n",
+    "# START ################\n",
     "\n",
-    "# END TODO###################"
+    "# SGD\n",
+    "print('Start SGD\\n')\n",
+    "sgd_model = Sequential(Linear(784, linear_units), Relu(), Linear(linear_units, 10))\n",
+    "\n",
+    "loss_fn = CrossEntropyLoss()\n",
+    "optimizer = SGD(sgd_model.parameters(), lr=sgd_learning_rate)\n",
+    "   \n",
+    "sgd_train_costs, sgd_train_accuracies, sgd_eval_costs, sgd_eval_accuracies =\\\n",
+    "    train(sgd_model, loss_fn, optimizer, x_train, y_train, x_val, y_val, num_epochs=num_epochs, batch_size=batch_size)\n",
+    "\n",
+    "    \n",
+    "# SGD momentum\n",
+    "print('\\nStart SGD with momentum\\n')\n",
+    "sgdm_model = Sequential(Linear(784, linear_units), Relu(), Linear(linear_units, 10))\n",
+    "\n",
+    "loss_fn = CrossEntropyLoss()\n",
+    "optimizer = SGD(sgdm_model.parameters(), lr=sgd_learning_rate, momentum=momentum)\n",
+    "   \n",
+    "sgdm_train_costs, sgdm_train_accuracies, sgdm_eval_costs, sgdm_eval_accuracies =\\\n",
+    "    train(sgdm_model, loss_fn, optimizer, x_train, y_train, x_val, y_val, num_epochs=num_epochs, batch_size=batch_size)\n",
+    "    \n",
+    "    \n",
+    "# Adam\n",
+    "print('\\nStart Adam\\n')\n",
+    "adam_model = Sequential(Linear(784, linear_units), Relu(), Linear(linear_units, 10))\n",
+    "\n",
+    "loss_fn = CrossEntropyLoss()\n",
+    "optimizer = Adam(adam_model.parameters(), lr=adam_learning_rate)\n",
+    "   \n",
+    "adam_train_costs, adam_train_accuracies, adam_eval_costs, adam_eval_accuracies =\\\n",
+    "    train(adam_model, loss_fn, optimizer, x_train, y_train, x_val, y_val, num_epochs=num_epochs, batch_size=batch_size)\n",
+    "\n",
+    "# END ###################"
    ]
   },
   {
@@ -672,9 +704,47 @@
     "import matplotlib.pyplot as plt \n",
     "% matplotlib inline\n",
     "\n",
-    "# START TODO ################\n",
+    "# START ################\n",
+    "num_epochs = 10\n",
+    "x = np.arange(1, num_epochs+1)\n",
+    "#print(x)\n",
+    "# training loss\n",
     "\n",
-    "# END TODO###################D"
+    "plt.figure(figsize=(8, 5))\n",
+    "plt.plot(x, sgd_train_costs, label='sgd')\n",
+    "plt.plot(x, sgdm_train_costs, label='sgd momentum')\n",
+    "plt.plot(x, adam_train_costs, label='adam')\n",
+    "\n",
+    "plt.grid(True)\n",
+    "plt.margins(0, 0.05)\n",
+    "plt.xlabel('epoch')\n",
+    "plt.ylabel('loss')\n",
+    "\n",
+    "plt.title(\"Training loss\")\n",
+    "\n",
+    "plt.legend()\n",
+    "\n",
+    "plt.show()\n",
+    "\n",
+    "# training accuracy\n",
+    "plt.figure(figsize=(8,5))\n",
+    "plt.plot(x, sgd_train_accuracies, label='sgd')\n",
+    "plt.plot(x, sgdm_train_accuracies, label='sgd momentum')\n",
+    "plt.plot(x, adam_train_accuracies, label='adam')\n",
+    "\n",
+    "plt.grid(True)\n",
+    "plt.margins(0, 0.05)\n",
+    "plt.xlabel('epoch')\n",
+    "plt.ylabel('loss')\n",
+    "#plt.ylim(ymax=1)\n",
+    "\n",
+    "plt.title(\"Training accuracy\")\n",
+    "\n",
+    "plt.legend()\n",
+    "\n",
+    "plt.show()\n",
+    "\n",
+    "# END ###################"
    ]
   },
   {
@@ -732,10 +802,18 @@
     "        \n",
     "        optimizer: The optimizer to wrap\n",
     "        \"\"\"\n",
-    "        # START TODO ################\n",
-    "        raise NotImplementedError\n",
-    "\n",
-    "        # End TODO ################\n",
+    "        # START ################\n",
+    "        \n",
+    "        self.optimizer = optimizer\n",
+    "        self.last_epoch = 0\n",
+    "        self.initial_lr = np.copy(optimizer.lr)  \n",
+    "        \n",
+    "        self.epochs = epochs\n",
+    "        self.lrs = learning_rates\n",
+    "        \n",
+    "        self.lr_lambda = lambda ep: self.lrs[self.epochs.index(ep)] if ep in self.epochs else self.optimizer.lr\n",
+    "        \n",
+    "        # End ################\n",
     "        \n",
     "        \n",
     "class CosineAnnealingLR(LambdaLR):\n",
@@ -750,9 +828,16 @@
     "        optimizer: The optimizer to wrap\n",
     "        T_max:  Maximum number of epochs.\n",
     "        \"\"\"\n",
-    "        # START TODO ################\n",
-    "        raise NotImplementedError\n",
-    "        # End TODO ################"
+    "        # START ################\n",
+    "        self.optimizer = optimizer\n",
+    "        self.last_epoch = 0\n",
+    "        self.initial_lr = np.copy(optimizer.lr)  \n",
+    "        \n",
+    "        self.tmax = T_max\n",
+    "        \n",
+    "        self.lr_lambda = lambda ep: 0.5 * (1 + np.cos( (ep/self.tmax) * np.pi)) * self.initial_lr\n",
+    "        \n",
+    "        # End ################"
    ]
   },
   {
@@ -771,16 +856,50 @@
     "num_epochs = 80\n",
     "\n",
     "optimizer = Adam([])\n",
-    "picewise_scheduler = PiecewiseConstantLR(optimizer, [10, 20, 40, 50], [0.1, 0.05, 0.01, 0.001])\n",
+    "piecewise_scheduler = PiecewiseConstantLR(optimizer, [10, 20, 40, 50], [0.1, 0.05, 0.01, 0.001])\n",
     "\n",
     "optimizer = Adam([])\n",
     "cosine_scheduler = CosineAnnealingLR(optimizer, num_epochs)\n",
     "\n",
-    "# START TODO ################\n",
+    "# START ################\n",
+    "x = np.arange(1, num_epochs+1)\n",
+    "\n",
     "# plot piecewise lr\n",
+    "p = []\n",
+    "c = []\n",
+    "for i in range(0,80,1):\n",
+    "    piecewise_scheduler.step()\n",
+    "    p.append(piecewise_scheduler.optimizer.lr)\n",
+    "    \n",
+    "    cosine_scheduler.step()\n",
+    "    c.append(cosine_scheduler.optimizer.lr)\n",
+    "    \n",
+    "\n",
+    "plt.figure(figsize=(8,5))\n",
+    "plt.plot(x, p)\n",
+    "\n",
+    "plt.grid(True)\n",
+    "plt.margins(0,0.05)\n",
+    "plt.xlabel('epoch')\n",
+    "plt.ylabel('learning rate')\n",
+    "\n",
+    "plt.title(\"Piecewise constant learning rate schedule\")\n",
+    "\n",
+    "plt.show()\n",
     "\n",
     "# plot cosine lr\n",
-    "# End TODO ################"
+    "plt.figure(figsize=(8,5))\n",
+    "plt.plot(x, c)\n",
+    "\n",
+    "plt.grid(True)\n",
+    "plt.margins(0, 0.05)\n",
+    "plt.xlabel('epoch')\n",
+    "plt.ylabel('learning rate')\n",
+    "\n",
+    "plt.title(\"Cosine annealing learning rate schedule\")\n",
+    "\n",
+    "plt.show()\n",
+    "# End ################"
    ]
   },
   {
@@ -789,7 +908,7 @@
    "source": [
     "### Your Feedback on Exercise 3.1\n",
     "\n",
-    "TODO"
+    "We invest around 2h for this exercise. It is good to see how the different optimizers and learning rate schdulers behave during training."
    ]
   },
   {
@@ -1109,7 +1228,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
