Updated feedback for first exercise.

--- a/exercise03/exercise03_optimization_and_regularization.ipynb
+++ b/exercise03/exercise03_optimization_and_regularization.ipynb
@@ -908,7 +908,7 @@
    "source": [
     "### Your Feedback on Exercise 3.1\n",
     "\n",
-    "We invest around 2h for this exercise. It is good to see how the different optimizers and learning rate schdulers behave during training."
+    "We invested about 2h for this exercise. It was good to see how the different optimizers and learning rate schedulers behave during training."
    ]
   },
   {
