--- a/exercise03/exercise03_optimization_and_regularization.ipynb
+++ b/exercise03/exercise03_optimization_and_regularization.ipynb
@@ -1122,10 +1122,10 @@
     "params = [p for p in models[\"no_reg\"].parameters() if \"W\" in p.name]\n",
     "cross_entropy = CrossEntropyLoss()\n",
     "optimizer = SGD(models[\"no_reg\"].parameters(), lr=learning_rate, momentum=momentum)\n",
-    "#train(models[\"no_reg\"], cross_entropy, optimizer, x_train, y_train,\n",
-    "#      x_val, y_val, num_epochs=num_epochs, batch_size=batch_size)\n",
+    "train(models[\"no_reg\"], cross_entropy, optimizer, x_train, y_train,\n",
+    "      x_val, y_val, num_epochs=num_epochs, batch_size=batch_size)\n",
     "\n",
-    "# START TODO ################\n",
+    "# START ################\n",
     "\n",
     "\n",
     "# L2 regularization\n",
@@ -1160,7 +1160,7 @@
     "      x_val, y_val, num_epochs=num_epochs, batch_size=batch_size)\n",
     "\n",
     "\n",
-    "# END TODO ################\n",
+    "# END ################\n",
     "pass"
    ]
   },
