Update param names.

--- a/exercise03/exercise03_optimization_and_regularization.ipynb
+++ b/exercise03/exercise03_optimization_and_regularization.ipynb
@@ -1265,7 +1265,9 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1387,7 +1389,7 @@
     "# no regularization\n",
     "print(\"No regularization.\")\n",
     "models[\"no_reg\"] = build_model()\n",
-    "params = [p for p in models[\"no_reg\"].parameters() if \"W\" in p.name]\n",
+    "params_noreg = [p for p in models[\"no_reg\"].parameters() if \"W\" in p.name]\n",
     "cross_entropy = CrossEntropyLoss()\n",
     "optimizer = SGD(models[\"no_reg\"].parameters(), lr=learning_rate, momentum=momentum)\n",
     "train(models[\"no_reg\"], cross_entropy, optimizer, x_train, y_train,\n",
@@ -1399,8 +1401,8 @@
     "# L2 regularization\n",
     "print(\"L2 regularization.\")\n",
     "models[\"l2\"] = build_model()\n",
-    "params = [p for p in models[\"l2\"].parameters() if \"W\" in p.name]\n",
-    "l2_loss = RegularizedCrossEntropy(L2Regularization(alpha_l2, params))\n",
+    "params_l2 = [p for p in models[\"l2\"].parameters() if \"W\" in p.name]\n",
+    "l2_loss = RegularizedCrossEntropy(L2Regularization(alpha_l2, params_l2))\n",
     "optimizer = SGD(models[\"l2\"].parameters(), lr=learning_rate, momentum=momentum)\n",
     "train(models[\"l2\"], l2_loss, optimizer, x_train, y_train,\n",
     "      x_val, y_val, num_epochs=num_epochs, batch_size=batch_size)\n",
@@ -1410,8 +1412,8 @@
     "print(\"L1 regularization.\")\n",
     "\n",
     "models[\"l1\"] = build_model()\n",
-    "params = [p for p in models[\"l1\"].parameters() if \"W\" in p.name]\n",
-    "l1_loss = RegularizedCrossEntropy(L1Regularization(alpha_l1, params))\n",
+    "params_l1 = [p for p in models[\"l1\"].parameters() if \"W\" in p.name]\n",
+    "l1_loss = RegularizedCrossEntropy(L1Regularization(alpha_l1, params_l1))\n",
     "optimizer = SGD(models[\"l1\"].parameters(), lr=learning_rate, momentum=momentum)\n",
     "train(models[\"l1\"], l1_loss, optimizer, x_train, y_train,\n",
     "      x_val, y_val, num_epochs=num_epochs, batch_size=batch_size)\n",
@@ -1421,7 +1423,7 @@
     "# dropout\n",
     "print(\"Dropout.\")\n",
     "models[\"drop\"] = build_model_dropout()\n",
-    "params = [p for p in models[\"drop\"].parameters() if \"W\" in p.name]\n",
+    "params_drop = [p for p in models[\"drop\"].parameters() if \"W\" in p.name]\n",
     "cross_entropy = CrossEntropyLoss()\n",
     "optimizer = SGD(models[\"drop\"].parameters(), lr=learning_rate, momentum=momentum)\n",
     "train(models[\"drop\"], cross_entropy, optimizer, x_train, y_train,\n",
@@ -1535,7 +1537,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
