--- a/exercise06/exercise06_hpo_bohb.ipynb
+++ b/exercise06/exercise06_hpo_bohb.ipynb
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,9 +141,26 @@
     "    pool_kernel_size = 2\n",
     "    conv_kernel_size = 3\n",
     "    \n",
-    "    # START TODO ################\n",
+    "    # START ################\n",
     "    \n",
-    "    # End TODO ################\n",
+    "    conv = nn.Sequential(\n",
+    "        nn.Conv2d(in_channels=1, out_channels= num_filters_per_layer[0], kernel_size=conv_kernel_size, stride=1, padding=0),\n",
+    "        nn.ReLU(),\n",
+    "        nn.MaxPool2d(kernel_size=pool_kernel_size, stride=1)\n",
+    "    )\n",
+    "    \n",
+    "    for l in range(1, len(num_filters_per_layer)):\n",
+    "        conv.add_module(nn.Conv2d(in_channels=num_filters_per_layer[l-1], out_channels=num_filters_per_layer[l], kernel_size=conv_kernel_size, stride=1, padding=0))\n",
+    "        conv.add_module(nn.ReLU())\n",
+    "        conv.add_module(nn.MaxPool2d(kernel_size=pool_kernel_size, stride=1))\n",
+    "    \n",
+    "    conv.add_module(nn.Linear(num_filters_per_layer[-1], 10))\n",
+    "    conv.add_module(nn.LogSoftmax())\n",
+    "    \n",
+    "    return conv\n",
+    "    \n",
+    "    \n",
+    "    # End ################\n",
     "\n",
     "\n",
     "def get_configspace() -> CS.ConfigurationSpace:\n",
@@ -159,9 +176,23 @@
     "      include num_filters_2 only if num_conv_layers > 1\n",
     "    \"\"\"\n",
     "    cs = CS.ConfigurationSpace()\n",
-    "    # START TODO ################\n",
-    "\n",
-    "    # End TODO ################\n",
+    "    # START ################\n",
+    "    \n",
+    "    # learning rate\n",
+    "    lr = CSH.UniformFloatHyperparameter('learning_rate', lower=1e-6, upper=1e-0, log=True)\n",
+    "    # num_filters_1\n",
+    "    num_filters_1 = CSH.UniformIntegerHyperparameter('num_filters_1', lower=2, upper=8)\n",
+    "    # num_filters_2\n",
+    "    num_filters_2 = CSH.UniformIntegerHyperparameter('num_filters_2', lower=2, upper=8)\n",
+    "    # num_conv_layers\n",
+    "    num_conv_layers = CSH.UniformIntegerHyperparameter('num_conv_layers', lower=1, upper=2)\n",
+    "    #condition\n",
+    "    cond = CS.GreaterThanCondition(num_filters_2, num_conv_layers, 1)\n",
+    "    \n",
+    "    cs.add_hyperparameters([lr, num_filters_1, num_filters_2, num_conv_layers])\n",
+    "    cs.add_condition(cond)\n",
+    "    \n",
+    "    # End ################\n",
     "    return cs"
    ]
   },
@@ -696,7 +727,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
