Updated configspace of BOHB.

--- a/exercise06/exercise06_hpo_bohb.ipynb
+++ b/exercise06/exercise06_hpo_bohb.ipynb
@@ -506,10 +506,36 @@
     "          include num_filters_3 only if num_conv_layers > 2\n",
     "          include sgd_momentum  only if       optimizer = SGD\n",
     "        \"\"\"\n",
-    "        # START TODO ################\n",
-    "        raise NotImplementedError\n",
+    "        # START ################\n",
+    "        cs = CS.ConfigurationSpace()\n",
+    "        \n",
+    "        # num_filters_1\n",
+    "        num_filters_1 = CSH.UniformIntegerHyperparameter('num_filters_1', lower=4, upper=32)\n",
+    "        # num_filters_2\n",
+    "        num_filters_2 = CSH.UniformIntegerHyperparameter('num_filters_2', lower=4, upper=32)\n",
+    "        # num_filters_3\n",
+    "        num_filters_3 = CSH.UniformIntegerHyperparameter('num_filters_3', lower=4, upper=32)\n",
+    "        # num_conv_layers\n",
+    "        num_conv_layers = CSH.UniformIntegerHyperparameter('num_conv_layers', lower=1, upper=3)\n",
+    "\n",
+    "        # learning rate\n",
+    "        lr = CSH.UniformFloatHyperparameter('learning_rate', lower=1e-6, upper=1e-1, log=True)\n",
+    "        # sgd momentum\n",
+    "        sgd_momentum = CSH.UniformFloatHyperparameter('sgd_momentum', lower=0.00, upper=0.99)\n",
+    "        #optimizer\n",
+    "        optimizer = CSH.CategoricalHyperparameter('optimizer', ['Adam', 'SGD'])\n",
+    "        \n",
+    "        #condition\n",
+    "        cond1 = CS.GreaterThanCondition(num_filters_2, num_conv_layers, 1)\n",
+    "        cond2 = CS.GreaterThanCondition(num_filters_3, num_conv_layers, 2)\n",
+    "        cond3 = CS.EqualsCondition(sgd_momentum, optimizer, 'SGD')\n",
+    "\n",
+    "        cs.add_hyperparameters([num_filters_1, num_filters_2, num_filters_3, num_conv_layers, lr, sgd_momentum, optimizer])\n",
+    "        cs.add_condition([cond1, cond2, cond3])\n",
+    "\n",
+    "        return cs\n",
     "  \n",
-    "        # END TODO ################\n",
+    "        # END ################\n",
     "\n",
     "    def compute(self, config: CS.Configuration, budget: float, working_directory: str,\n",
     "                *args, **kwargs) -> float:\n",
