Updated get_conv_model with orderedDict.

--- a/exercise06/exercise06_hpo_bohb.ipynb
+++ b/exercise06/exercise06_hpo_bohb.ipynb
@@ -144,30 +144,46 @@
     "    \n",
     "    # START ################\n",
     "    \n",
-    "    conv = nn.Sequential(\n",
-    "        nn.Conv2d(in_channels=1, out_channels= num_filters_per_layer[0], kernel_size=conv_kernel_size, stride=1, padding=0),\n",
-    "        nn.ReLU(),\n",
-    "        nn.MaxPool2d(kernel_size=pool_kernel_size, stride=1)\n",
-    "    )\n",
-    "    \n",
-    "    for l in range(1, len(num_filters_per_layer)):\n",
-    "        conv.add_module('conv2',nn.Conv2d(in_channels=num_filters_per_layer[l-1], out_channels=num_filters_per_layer[l], kernel_size=conv_kernel_size, stride=1, padding=0))\n",
-    "        conv.add_module('relu2',nn.ReLU())\n",
-    "        conv.add_module('maxpool2',nn.MaxPool2d(kernel_size=pool_kernel_size, stride=1))\n",
+    "    #conv = nn.Sequential(\n",
+    "    #    nn.Conv2d(in_channels=1, out_channels= num_filters_per_layer[0], kernel_size=conv_kernel_size, stride=1, padding=0),\n",
+    "    #    nn.ReLU(),\n",
+    "    #    nn.MaxPool2d(kernel_size=pool_kernel_size, stride=1)\n",
+    "    #)\n",
+    "    #\n",
+    "    #for l in range(1, len(num_filters_per_layer)):\n",
+    "    #    conv.add_module('conv2',nn.Conv2d(in_channels=num_filters_per_layer[l-1], out_channels=num_filters_per_layer[l], kernel_size=conv_kernel_size, stride=1, padding=0))\n",
+    "    #    conv.add_module('relu2',nn.ReLU())\n",
+    "    #    conv.add_module('maxpool2',nn.MaxPool2d(kernel_size=pool_kernel_size, stride=1))\n",
     "    ##############TODO####################################################################################################\n",
     "    \n",
-    "    modules = conv.modules()\n",
+    "    #modules = conv.modules()\n",
     "\n",
-    "    dd = deque(modules, maxlen=1)\n",
-    "    last_element = dd.pop()\n",
-    "    #print(type(last_element))\n",
-    "    \n",
-    "    lin_inputs = last_element\n",
+    "    #dd = deque(modules, maxlen=1)\n",
+    "    #last_element = dd.pop()\n",
+    "    ##print(type(last_element))\n",
+    "    #\n",
+    "    #lin_inputs = last_element\n",
     "    \n",
     "    #print(lin_inputs)\n",
     "    \n",
-    "    conv.add_module('linear', nn.Linear(num_filters_per_layer[-1], 10))\n",
-    "    conv.add_module('logsoftmax', nn.LogSoftmax())\n",
+    "    #conv.add_module('linear', nn.Linear(num_filters_per_layer[-1], 10))\n",
+    "    #conv.add_module('logsoftmax', nn.LogSoftmax())\n",
+    "    \n",
+    "    d = OrderedDict([\n",
+    "        ('conv1', nn.Conv2d(in_channels=1, out_channels= num_filters_per_layer[0], kernel_size=conv_kernel_size, stride=1, padding=0)),\n",
+    "        ('relu1', nn.ReLU()),\n",
+    "        ('maxpool1', nn.MaxPool2d(kernel_size=pool_kernel_size, stride=1))\n",
+    "    ])\n",
+    "    \n",
+    "    for l in range(1, len(num_filters_per_layer)):\n",
+    "        d.move_to_end('conv2',nn.Conv2d(in_channels=num_filters_per_layer[l-1], out_channels=num_filters_per_layer[l], kernel_size=conv_kernel_size, stride=1, padding=0))\n",
+    "        d.move_to_end('relu2',nn.ReLU())\n",
+    "        d.move_to_end('maxpool2',nn.MaxPool2d(kernel_size=pool_kernel_size, stride=1))\n",
+    "    \n",
+    "    d.move_to_end('linear', nn.Linear(num_filters_per_layer[-1], 10))\n",
+    "    d.move_to_end('logsoftmax', nn.LogSoftmax())\n",
+    "    \n",
+    "    conv = nn.Sequential(d)\n",
     "    \n",
     "    return conv\n",
     "    \n",
