--- a/exercise07/exercise07_autoencoder.ipynb
+++ b/exercise07/exercise07_autoencoder.ipynb
@@ -50,61 +50,49 @@
     "\n",
     "\\begin{equation*}\n",
     "P(x = white) = \\frac{3}{6} = \\frac{1}{2}\n",
-    "\\end{equation*}\n",
+    "\\end{equation*}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**b)**\n",
     "\n",
+    "From seeing the black side, we know that the card is either the black-black card or the black-white card.\n",
+    "There are two possible ways to place the black-black card on the table so that it shows a black side and one way to place the black-white ward on the table so that it shows the black side on top. In two of those three cases there is a black side on the other side (when the card is in fact the black-black card) and one case of a white side on the other side (when the card is in fact the black-white card).\n",
     "\n",
-    "**b)** B = shows black side, BB = other side is also black / black card\n",
+    "BB is the black-black card and BW the black-white card. \n",
+    "x is the visible color of the card on the table.\n",
+    "y is the color of the other, not visible side of the card on the table.\n",
     "\n",
-    "From a) we have:\n",
-    "\\begin{equation*}\n",
-    "P(B) = \\frac{1}{2}\n",
-    "\\end{equation*}\n",
+    "$ P(BB | x = black) = \\frac{2}{3} $\n",
     "\n",
-    "We have only one card with two black sides so:\n",
+    "$ P(BW | x = black) = \\frac{1}{3} $\n",
     "\n",
-    "\\begin{equation*}\n",
-    "P(BB) = \\frac{1}{3}\n",
-    "\\end{equation*}\n",
+    "$ P(y = black | BB) = 1 $\n",
     "\n",
-    "The probabilty that the card is showing a black side if we have the black card is \n",
+    "$ P(y = black | BW) = 0 $\n",
     "\n",
-    "\\begin{equation*}\n",
-    "P(B \\mid BB) = 1\n",
-    "\\end{equation*}\n",
-    "\n",
-    "So we can calculate the wanted probabilty:\n",
-    "\n",
-    "\\begin{equation*}\n",
-    "P(BB \\mid B) = \\frac{P(BB) * P(B \\mid BB)}{P(B)} = \\frac{\\frac{1}{3}* 1}{\\frac{1}{2}} = \\frac{2}{3}\n",
-    "\\end{equation*}\n",
-    "\n",
+    "$ P(y = black | x = black) = P(y = black | BB) * P(BB | x = black) + P(y = black | BW) * P(BW | x = black) = \\frac{2}{3} * 1 + \\frac{1}{3} * 0 = \\frac{2}{3} $"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "**c)**\n",
     "\n",
-    "W = shows white side, WB = other side is black / white-black card\n",
     "\n",
-    "From a) we have:\n",
-    "\\begin{equation*}\n",
-    "P(W) = \\frac{1}{2}\n",
-    "\\end{equation*}\n",
+    "Analogous to b) we can count the equally likely possible ways that y = black given x = white, but due to problem's symmetry we know:\n",
     "\n",
-    "We have only one card with one black and one white side so:\n",
+    "$ P(y = black | x = white) = P (y = white | x = black) $\n",
     "\n",
-    "\\begin{equation*}\n",
-    "P(WB) = \\frac{1}{3}\n",
-    "\\end{equation*}\n",
+    "As there are only two values y can take on, their conditional propabilities must add up to 1.\n",
+    "$ P(y = black | x = black) + P(y = white | x = black) = 1 $\n",
     "\n",
-    "The probabilty that the card is showing a white side if we have the white-black card is \n",
     "\n",
-    "\\begin{equation*}\n",
-    "P(W \\mid WB) = 1\n",
-    "\\end{equation*}\n",
-    "\n",
-    "So we can calculate the wanted probabilty:\n",
-    "\n",
-    "\\begin{equation*}\n",
-    "P(WB \\mid W) = \\frac{P(WB) * P(W \\mid WB)}{P(W)} = \\frac{\\frac{1}{3}* 1}{\\frac{1}{2}} = \\frac{2}{3}\n",
-    "\\end{equation*}\n",
-    "\n"
+    "And thus we get $P(y = black | x = white) = 1 - P(y = black | x = black) = \\frac{1}{3} $"
    ]
   },
   {
@@ -983,7 +971,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
